tests/neg-custom-args/captures/real-try.check
-- [E129] Potential Issue Warning: tests/neg-custom-args/captures/real-try.scala:36:4 ----------------------------------
36 |  b.x
   |  ^^^
   |  A pure expression does nothing in statement position; you may be omitting necessary parentheses
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:19:4 --------------------------------------
19 |    () => foo(1)  // error
   |    ^^^^^^^^^^^^
   |    Found:    () ->{cap[<try block>]} Unit
   |    Required: () ->? Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/real-try.scala:25:4 --------------------------------------
25 |    () => Cell(foo(1))  // error
   |    ^^^^^^^^^^^^^^^^^^
   |    Found:    () ->{cap[<try block>]} Cell[Unit]^?
   |    Required: () ->? Cell[Unit]^?
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/real-try.scala:31:21 ----------------------------------------------------------
31 |    Cell(() => foo(1))// // error
   |                     ^
   |(canThrow$4 : CanThrow[Ex1 | Ex2]^{cap[<try block>]}) cannot be referenced here; it is not included in the allowed capture set ?
   |of an enclosing function literal with expected type box () ->? Unit
   |
   |Note that reference (canThrow$4 : CanThrow[Ex1 | Ex2]^{cap[<try block>]}), defined at level 2
   |cannot be included in outer capture set ?, defined at level 1 in method test
